fix(table, box): aligning box bottom margin with brand guidelines, and removing underlines from anchors in tables.

--- a/sass/bulma/elements/_box.sass
+++ b/sass/bulma/elements/_box.sass
@@ -6,6 +6,7 @@ $box-radius: $radius
 $box-shadow: 0 0 0 1px rgba($black, 0.1)
 $box-link-hover-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 2px $primary
 $box-link-active-shadow: inset 0 1px 2px rgba($black, 0.2), 0 0 0 2px $primary
+$box-bottom-margin: 1rem
 
 .box
     +transition
@@ -13,6 +14,9 @@ $box-link-active-shadow: inset 0 1px 2px rgba($black, 0.2), 0 0 0 2px $primary
     border-radius: $box-radius
     box-shadow: $box-shadow
     font-weight: 600
+
+    &:not(:last-child)
+      margin-bottom: $box-bottom-margin
 
 a.box
   &:hover,
